<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>husarion_ugv_lights</name>
  <version>2.1.1</version>
  <description>Package used to control the robot lights</description>
  <maintainer email="support@husarion.com">Husarion</maintainer>
  <license>Apache License 2.0</license>

  <url type="website">https://husarion.com/</url>
  <url type="repository">https://github.com/husarion/panther_ros</url>
  <url type="bugtracker">https://github.com/husarion/panther_ros/issues</url>

  <author email="dawid.kmak@husarion.com">Dawid Kmak</author>
  <author email="krzysztof.wojciechowski@husarion.com">Krzysztof Wojciechowski</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>diagnostic_updater</depend>
  <depend>husarion_ugv_utils</depend>
  <depend>image_transport</depend>
  <depend>libpng-dev</depend>
  <depend>panther_msgs</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>google-mock</test_depend>
  <test_depend>ros_testing</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
